Separate Admin and Dashboard component from app component

--- a/src/app/views/widgets/widgets.component.html
+++ b/src/app/views/widgets/widgets.component.html
@@ -19,7 +19,8 @@
         </div>
         <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
           <canvas baseChart class="chart"
-          [datasets]="lineChart1Data"
+          [
+                  datasets]="lineChart1Data"
           [labels]="lineChart1Labels"
           [options]="lineChart1Options"
           [colors]="lineChart1Colours"
